// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SettingsDrawer SettingsDrawer should render correctly 1`] = `
<TouchableOpacity
  onPress={[MockFunction]}
>
  <View
    accessibilityRole="none"
    accessible={true}
    style={
      {
        "backgroundColor": "#ffffff",
        "borderTopColor": "#ffffff",
        "borderTopWidth": 1,
        "padding": 16,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
        }
      }
    >
      <View
        style={
          {
            "flex": 1,
          }
        }
        testID="listitemcolumn"
      >
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#141618",
              "fontFamily": "EuclidCircularB-Medium",
              "fontSize": 16,
              "fontWeight": "500",
              "letterSpacing": 0,
              "lineHeight": 24,
            }
          }
        >
          Test Title
        </Text>
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#6a737d",
              "fontFamily": "EuclidCircularB-Regular",
              "fontSize": 14,
              "fontWeight": "400",
              "letterSpacing": 0,
              "lineHeight": 22,
            }
          }
        >
          Test Description
        </Text>
      </View>
      <View
        accessible={false}
        style={
          {
            "width": 16,
          }
        }
        testID="listitem-gap"
      />
      <View
        style={
          {
            "flex": -1,
          }
        }
        testID="listitemcolumn"
      >
        <SvgMock
          color="#141618"
          height={20}
          name="ArrowRight"
          style={
            {
              "height": 20,
              "paddingLeft": 16,
              "width": 20,
            }
          }
          width={20}
        />
      </View>
    </View>
  </View>
</TouchableOpacity>
`;

exports[`SettingsDrawer SettingsDrawer should render with redesign enabled 1`] = `
<TouchableOpacity
  onPress={[MockFunction]}
>
  <View
    accessibilityRole="none"
    accessible={true}
    style={
      {
        "backgroundColor": "#ffffff",
        "borderTopColor": "#ffffff",
        "borderTopWidth": 1,
        "padding": 16,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
        }
      }
    >
      <View
        style={
          {
            "flex": 1,
          }
        }
        testID="listitemcolumn"
      >
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#141618",
              "fontFamily": "EuclidCircularB-Medium",
              "fontSize": 16,
              "fontWeight": "500",
              "letterSpacing": 0,
              "lineHeight": 24,
            }
          }
        >
          Test Title
        </Text>
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#6a737d",
              "fontFamily": "EuclidCircularB-Regular",
              "fontSize": 14,
              "fontWeight": "400",
              "letterSpacing": 0,
              "lineHeight": 22,
            }
          }
        >
          Test Description
        </Text>
      </View>
      <View
        accessible={false}
        style={
          {
            "width": 16,
          }
        }
        testID="listitem-gap"
      />
      <View
        style={
          {
            "flex": -1,
          }
        }
        testID="listitemcolumn"
      >
        <SvgMock
          color="red"
          height={20}
          name="ArrowRight"
          style={
            {
              "height": 20,
              "paddingLeft": 16,
              "width": 20,
            }
          }
          width={20}
        />
      </View>
    </View>
  </View>
</TouchableOpacity>
`;
